<resources>
    <string name="client_id">4141923978-5o75as57bj4f9r8v4qjs6vuduhgmd1po.apps.googleusercontent.com</string>
    <string name="facebook_app_id">1713202839580225</string>
    <string name="fb_login_protocol_scheme">fb1713202839580225</string>
    <string name="facebook_client_token">6c0db974f342acd1876660534ef63f24</string>
    <string name="app_name">Equipment Manager</string>
    <string name="email_not_exist">Email does not exist. Please check again.</string>
    <string name="wrong_password">Incorrect password. Please try again.</string>
    <string name="equipment">Equipment</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome\nBack</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="go_to_register">Are you new user? Register</string>
    <string name="create_account">Create\nAccount</string>
    <string name="name">Name</string>
    <string name="go_to_login">Have an account? Login</string>
    <string name="enter_your_information">Please enter your information</string>
    <string name="student_id">Student ID</string>
    <string name="submit">submit</string>
    <string name="phone_number">Phone number</string>
    <string name="change_password">Change password</string>
    <string name="logout">Logout</string>
    <string name="device_information">Device Information</string>
    <string name="select_language">Select Language</string>
    <string name="device">Device</string>
    <string name="classroom">Class room</string>
    <string name="notification">Notification</string>
    <string name="history">History</string>
    <string name="user_guide">User Guide</string>
    <string name="account_manager">Account Manager</string>
    <string name="setting">Setting</string>
    <string name="contact">Contact</string>
    <string name="dark_mode">Dard Mode</string>
    <string name="change_language">Please restart the application to apply changes.</string>
    <string name="user_guide_title">User Guide</string>
    <string name="device_id">Device ID</string>
    <string name="device_model">Device Model</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="brand">Brand</string>
    <string name="android_version">Android Version</string>
    <string name="sdk_version">SDK Version</string>
    <string name="reset_password_successful">Password reset email sent.</string>
    <string name="reset_password_failed">Failed to send reset email.</string>
    <string name="required_student_id">Student ID cannot be empty</string>
    <string name="required_phonenumber">Phone Number cannot be empty</string>
    <string name="student_id_or_phonenumber_already">Student ID or Phone Number already exists</string>
    <string name="updated_information_user">User information updated</string>
    <string name="failed_update_user">Failed to update information</string>
    <string name="failed_retrieve_user">Failed to retrieve user information</string>
    <string name="login_cancelled">Login cancelled.</string>
    <string name="login_failed">Login failed</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="login_successful">Login successful</string>
    <string name="required_password">Password cannot be empty</string>
    <string name="required_name">Name cannot be empty</string>
    <string name="required_email">Email cannot be empty</string>
    <string name="enter_valid_email">Please enter valid email</string>
    <string name="login_google_successful">Google Login successful</string>
    <string name="login_google_failed">Google Login failed</string>
    <string name="create_account_successful">Create Account Successful</string>
    <string name="create_account_failed">Create Account Failed</string>
    <string name="logout_successful">Logout Successful</string>
    <string name="reload_app">Please restart the app to update the language.</string>
    <string name="room_id">Room ID</string>
    <string name="status">Status</string>
    <string name="list_equipment_on_room">List of equipment in the classroom</string>
    <string name="quantity">Quantity</string>
    <string name="cancel">Cancel</string>
    <string name="borrow">Borrow</string>
    <string name="error_renting_room">Error when renting room</string>
    <string name="borrow_time">Borrow time</string>
    <string name="return_time">Return time</string>
    <string name="borrow_a_room">Borrow a room</string>
    <string name="search_classroom">Search by room id</string>
    <string name="failed_fetch_data_firestore">Error while retrieving data from Firestore</string>
    <string name="no_equipment">No equipment in room</string>
    <string name="room_is_occupied">Room is occupied, please choose another room</string>
    <string name="error_update_room_status">Error updating room status</string>
    <string name="error_update_equipment_status">Error updating equipment status</string>
    <string name="room_borrowed_successfully">Room borrowed successfully</string>
    <string name="room_borrowed_failed">Borrowing a room failed</string>
    <string name="check_out_successful">Check out successful</string>
    <string name="check_out_failed">Check out failed</string>
    <string name="search_equipment">Search by equipment name</string>
    <string name="search_history">Search by room id  equipment name</string>
    <string name="equipment_id">Equipment ID</string>
    <string name="equipment_name">Equipment Name</string>
    <string name="enter_quantity">Enter quantity (Max:</string>
    <string name="borrow_successfully">Successfully borrowed</string>
    <string name="borrow_equipment_successful">Borrow equipment successfull</string>
    <string name="borrow_equipment_failed">Failed to borrow equipment</string>
    <string name="equipment_quantity_required">Please enter a valid quantity (1-</string>
    <string name="failed_save_equipment_firestore">Failed to save equipment to firestore</string>
    <string name="failed_save_room_firestore">Failed to save room to firestore</string>
    <string name="return_room">Return room</string>
    <string name="return_equipment">Return equipment</string>
    <string name="return_equipment_successful">Return equipment successful</string>
    <string name="notification_permission_granted">Notification permission granted</string>
    <string name="notification_permission_denied">Notification permission denied</string>
    <string name="permission_library">Photo library access denied</string>
    <string name="updated_photo_successfully">Photo updated successfully</string>
    <string name="error_processing_photo">Error processing photo</string>
    <string name="contact_title">Contact Us</string>
    <string name="contact_description">Contact the authorities for support with issues or further assistance.</string>
    <string name="email_label">Email:</string>
    <string name="contact_email">support@devicemanager.com</string>
    <string name="phone_label">Phone:</string>
    <string name="contact_phone">+84 123 456 789</string>
    <string name="address_label">Address:</string>
    <string name="contact_address">123 Technology Street, Hanoi, Vietnam</string>
    <string name="send_request">Send Request</string>
    <string name="request_sent">Support request sent successfully!</string>
    <string name="request_failed">Failed to send support request.</string>
    <string name="room_borrowed_unreturned">You have borrowed another room and have not returned it</string>
    <string name="contact_admin">Please contact the administrator (Contact Section) to schedule a loan.</string>
    <string name="room_capacity">Room capacity</string>
    <string name="call_support">Call support</string>
    <string name="dial_failed">Failed to open dialer</string>
</resources>